chore: update schema
docs: provide API example JSON
chore: remove unnecessary API options
